# MEOW-APP

./: README.md  coding guidlines.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: CARGO_LOCK_FIX.md  README.md  android-test.yml  desktop-test.yml  fast-ci.yml  full-platform-test.yml  linux-appdoesrun.yml  linux-test.yml  validate-workflows.sh  windows-doesrun.yml  windows-test.yml
src/: App.tsx  activate-microphone.tsx  main.tsx  video.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/assets/: phone.html
src-tauri/capabilities/: mobile.json
src-tauri/src/: .null-ls_459615_lib.rs  .null-ls_664979_microphone.rs  bridge.rs  client_websocket_interface.rs  host_websocket_interface.rs  imp.md  lib.rs  main.rs  microphone.rs  microphone_fn.rs  qr_service.rs  video.rs
src-tauri/tests/: bridge_test.rs  tests_m.rs
src/activate-microphone/: activate-microphone.tsx
src/activate-video/: VideoPreview.tsx  VideoRecorder.tsx  useVideoStream.ts
src/bridge/: bridge.tsx  bridgeContext.tsx
src/bridge-logic/: offer.ts
src/components/: Offer.tsx
src/connection-interface/: connection-interface.tsx  qr-scanner.tsx
src/home/: home.tsx
src/host-client-socket/: client-connect-socket.tsx
src/host-start-socktet/: host-start-socket.tsx
temp maksim/: full-platform-test.yml
