[package]
name = "meow-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "meow_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qrcode = "0.14.1"
image = "0.25.8"
base64 = "0.22.1"
tiny_http = "0.12"
local-ip-address = "0.6.5"
webrtc = "0.14.0"
tokio = "1.47.1"
axum = {version="0.8.4", features=["ws"]}
tokio-stream = "0.1.17"
futures = "0.3.31"


